--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Chat Application</title>
 </head>
 <body>
+
+    <nav>
+        <img src="img/imgChat.png" alt="ChatApp">
+    </nav>
     
 </body>
 </html>
