--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css" />
     <script src="js/script.js"></script>
     <title>Chat Application</title>
 </head>
 <body>
 
     <nav>
-        <img src="img/imgChat.png" alt="ChatApp">
+        <img class="logo" src="img/imgChat.png" alt="ChatApp">
     </nav>
     
 </body>
