--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
     <nav>
         <img class="logo" src="img/imgChat.png" alt="ChatApp">
     </nav>
+
+    <div class="container">
+
+            <div class="message onright">Hey It's me</div>
+            <div class="message onleft">hi</div>
+
+    </div>
     
 </body>
 </html>
