Styling for form elements

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
             <div class="message onleft">hi</div>
 
     </div>
-    
+
+    <form action="#" id="myForm">
+        <input type="text" name="message" id="message" />
+        <input type="submit" value="send" />
+    </form>
+
 </body>
 </html>
