--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css" />
-    <script src="js/script.js"></script>
+    <script src="http://localhost:8000/socket.io/socket.io.js" defer></script>
+    <script src="js/client.js" defer></script>
     <title>Chat Application</title>
+    <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
 
@@ -21,7 +22,7 @@
 
     </div>
 
-    <form action="#" id="myForm">
+    <form action="#" id="send-container">
         <input type="text" name="message" id="message" />
         <input type="submit" value="send" />
     </form>
